[gd_scene load_steps=22 format=3 uid="uid://dtjstxt1awftg"]

[ext_resource type="Script" path="res://src/EnemyScene/enemy_scene.gd" id="1_yif72"]
[ext_resource type="Texture2D" uid="uid://c702wpwrpf6q0" path="res://assets/sprites/characters/slime.png" id="2_lwjor"]

[sub_resource type="AtlasTexture" id="AtlasTexture_oxcpd"]
atlas = ExtResource("2_lwjor")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0i8b8"]
atlas = ExtResource("2_lwjor")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_baul5"]
atlas = ExtResource("2_lwjor")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm50g"]
atlas = ExtResource("2_lwjor")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6aby"]
atlas = ExtResource("2_lwjor")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gv5er"]
atlas = ExtResource("2_lwjor")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_74nle"]
atlas = ExtResource("2_lwjor")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgmta"]
atlas = ExtResource("2_lwjor")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5plh"]
atlas = ExtResource("2_lwjor")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0448"]
atlas = ExtResource("2_lwjor")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7brx"]
atlas = ExtResource("2_lwjor")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1iey"]
atlas = ExtResource("2_lwjor")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ha4m5"]
atlas = ExtResource("2_lwjor")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a81x7"]
atlas = ExtResource("2_lwjor")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8o38"]
atlas = ExtResource("2_lwjor")
region = Rect2(160, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_g7hkf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxcpd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0i8b8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_baul5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm50g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6aby")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gv5er")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74nle")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgmta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5plh")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0448")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7brx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1iey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ha4m5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a81x7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8o38")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rhl1s"]
radius = 95.0

[sub_resource type="CircleShape2D" id="CircleShape2D_av36x"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_v5opv"]
radius = 16.0

[node name="enemy" type="CharacterBody2D"]
script = ExtResource("1_yif72")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(4.76837e-07, 2)
scale = Vector2(1.46875, 1.28125)
sprite_frames = SubResource("SpriteFrames_g7hkf")
animation = &"walk"
frame_progress = 0.456628
offset = Vector2(0, -6)

[node name="detection" type="Area2D" parent="."]
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection"]
y_sort_enabled = true
shape = SubResource("CircleShape2D_rhl1s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_av36x")

[node name="enemy_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
position = Vector2(1, -4)
shape = SubResource("CircleShape2D_v5opv")

[node name="take_damage_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(0.588235, 0.00392157, 0.00784314, 1)
offset_left = -14.0
offset_top = 4.0
offset_right = 266.0
offset_bottom = 54.0
scale = Vector2(0.1, 0.1)
max_value = 80.0
show_percentage = false

[connection signal="body_entered" from="detection" to="." method="_on_detection_body_entered"]
[connection signal="body_exited" from="detection" to="." method="_on_detection_body_exited"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
